--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "async-mutex": "0.4.0",
     "axios": "1.3.4",
     "moment": "2.29.4",
-    "react": "18.2.0",
+    "react": "^18.3.1",
     "react-countup": "^6.4.2",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.3.1",
     "react-icons": "4.8.0",
     "react-image-gallery": "1.2.11",
     "react-json-view": "^1.21.3",
